kubernetes/network-policies/allow-backend-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  namespace: default
spec:
 podSelector:
    matchLabels:
      app: db
      env: production
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
            env: production
      ports:
        - protocol: TCP
          port: 5432
