kubernetes/network-policies/allow-egress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-dns
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    - to:
    - podSelector:
        matchLabels:
          app: db
          env: production
    ports:
    - protocol: TCP
      port: 5432
